# openai-explorer

./: Cargo.toml  README.md
src/: bmc_prompt.txt  bot.rs  main.rs  sarcastic_bot_prompt.txt  value_proposition_prompt.txt  venue_bot.txt
src/bot/: steps.rs
src/bot/steps/: function_step.rs  simple_step.rs
