[package]
name = "openai-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.14.2"
async-trait = "0.1.73"
reqwest = {version="0.11.20", features=["json"]}
rustyline = "12.0.0"
serde_json = "1.0.107"
strfmt = "0.2.4"
tokio = {version="1.32.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features=["env-filter"]}
